--- a/stockGenie/public/css/style.css
+++ b/stockGenie/public/css/style.css
@@ -61,11 +61,17 @@ Date: Jun 2015
 /******** 1. General ********/
 
 body {
-  background: #f5f5f5;
+  /* background: #f5f5f5; */
   margin: 0;
   -webkit-text-size-adjust: 100%;
   font-family: 'Nunito', sans-serif;
+  /* background-image: url(../images/logo/background64.png) !important;
+  background-size:auto ;
+  background-repeat:repeat;
+  background-position: center center; */
+  
 }
+
 h1,
 h2,
 h3,
